--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
-    <item android:id="@+id/action_example"
-        android:title="@string/action_example"
-        app:showAsAction="withText|ifRoom" />
+    <item android:id="@+id/action_agregar"
+        android:title="@string/action_agregar"
+        android:icon="@drawable/ic_action_new"
+        app:showAsAction="always" />
 
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
