--- a/app/src/main/res/layout/activity_gastos_favoritos.xml
+++ b/app/src/main/res/layout/activity_gastos_favoritos.xml
@@ -6,10 +6,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity$PlaceholderFragment">
+    tools:context="com.funebunny.xpdroid.main.ui.GastosFavoritosActivity">
 
-    <TextView android:id="@+id/section_label"
-        android:text="@string/inicio"
+    <TextView android:text="@string/gastos_favoritos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
