--- a/app/src/main/res/layout/activity_gastos_favoritos.xml
+++ b/app/src/main/res/layout/activity_gastos_favoritos.xml
@@ -6,10 +6,20 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.funebunny.xpdroid.main.ui.GastosFavoritosActivity">
+    tools:context=".GastosFavoritosActivity">
 
     <TextView android:text="@string/gastos_favoritos"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gastos_favoritos_list"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
