--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,4 +17,11 @@
         <item>@string/navdrawitem6</item>
     </string-array>
 
+
+    <string-array name="gastos_favoritos_columnas">
+        <item>@string/nombre</item>
+        <item>@string/categoria</item>
+        <item>@string/importe</item>
+    </string-array>
+
 </resources>
