--- a/app/src/main/res/layout/activity_crear_gasto.xml
+++ b/app/src/main/res/layout/activity_crear_gasto.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
-    tools:context="com.funebunny.xpdroid.main.ui.CrearGastoActivity">
+    tools:context="com.funebunny.xpdroid.main.ui.CrearGastoActivity"
+    android:id="@+id/crear_gasto">
 
     <EditText
         android:layout_width="wrap_content"
