--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,10 +15,17 @@
         <item>@string/navdrawitem4</item>
         <item>@string/navdrawitem5</item>
         <item>@string/navdrawitem6</item>
+        <item>@string/navdrawitem7</item>
     </string-array>
 
 
     <string-array name="gastos_favoritos_columnas">
+        <item>@string/nombre</item>
+        <item>@string/categoria</item>
+        <item>@string/importe</item>
+    </string-array>
+
+    <string-array name="gastos_historial_columnas">
         <item>@string/nombre</item>
         <item>@string/categoria</item>
         <item>@string/importe</item>
