--- a/app/src/main/res/layout/activity_crear_gasto.xml
+++ b/app/src/main/res/layout/activity_crear_gasto.xml
@@ -1,83 +1,91 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true"
-    tools:context="com.funebunny.xpdroid.main.ui.CrearGastoActivity"
-    android:id="@+id/crear_gasto">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/descripcion"
-        android:hint="@string/descripcion"
-        android:layout_marginTop="48dp"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/datePicker"
-        android:layout_alignLeft="@+id/fecha"
-        android:layout_alignStart="@+id/fecha" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/crear_gasto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.funebunny.xpdroid.main.ui.CrearGastoActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="date"
-        android:ems="10"
-        android:id="@+id/fecha"
-        android:hint="@string/fecha"
-        android:layout_marginLeft="43dp"
-        android:layout_marginStart="43dp"
-        android:clickable="false"
-        android:layout_above="@+id/categoria"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="68dp" />
+        <EditText
+            android:id="@+id/descripcion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/fecha"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/fecha"
+            android:layout_marginTop="48dp"
+            android:layout_toLeftOf="@+id/datePicker"
+            android:hint="@string/descripcion" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/datePicker"
-        android:src="@drawable/ic_calendar"
-        android:contentDescription="@string/calendario"
-        android:onClick="mostrarDatePicker"
-        android:layout_alignBottom="@+id/fecha"
-        android:layout_toRightOf="@+id/fecha"
-        android:layout_toEndOf="@+id/fecha" />
+        <EditText
+            android:id="@+id/fecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/categoria"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="68dp"
+            android:layout_marginLeft="43dp"
+            android:layout_marginStart="43dp"
+            android:clickable="false"
+            android:ems="10"
+            android:hint="@string/fecha"
+            android:inputType="date" />
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/categoria"
-        android:hint="@string/categoria"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/fecha"
-        android:layout_alignStart="@+id/fecha"
-        android:layout_toLeftOf="@+id/datePicker"
-        android:layout_toStartOf="@+id/datePicker"
-        android:entries="@array/categorias"/>
+        <ImageButton
+            android:id="@+id/datePicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/fecha"
+            android:layout_toEndOf="@+id/fecha"
+            android:layout_toRightOf="@+id/fecha"
+            android:contentDescription="@string/calendario"
+            android:onClick="mostrarDatePicker"
+            android:src="@drawable/ic_calendar" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/importe"
-        android:hint="@string/importe"
-        android:layout_marginTop="71dp"
-        android:layout_below="@+id/categoria"
-        android:layout_alignLeft="@+id/categoria"
-        android:layout_alignStart="@+id/categoria" />
+        <Spinner
+            android:id="@+id/categoria"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/fecha"
+            android:layout_alignStart="@+id/fecha"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/datePicker"
+            android:layout_toStartOf="@+id/datePicker"
+            android:entries="@array/categorias"
+            android:hint="@string/categoria" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/guardar"
-        android:id="@+id/guardar"
-        android:layout_below="@+id/importe"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="59dp"
-        android:onClick="guardarGasto" />
+        <EditText
+            android:id="@+id/importe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/categoria"
+            android:layout_alignStart="@+id/categoria"
+            android:layout_below="@+id/categoria"
+            android:layout_marginTop="71dp"
+            android:ems="10"
+            android:hint="@string/importe"
+            android:inputType="numberDecimal" />
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/guardar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/importe"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="59dp"
+            android:onClick="guardarGasto"
+            android:text="@string/guardar" />
+
+    </RelativeLayout>
+</ScrollView>
