Added functionality to switch action bars across fragments

--- a/app/src/main/res/layout/activity_crear_gasto.xml
+++ b/app/src/main/res/layout/activity_crear_gasto.xml
@@ -58,7 +58,8 @@
         android:layout_toLeftOf="@+id/datePicker"
         android:layout_toStartOf="@+id/datePicker"
         android:entries="@array/categorias"
-        android:hint="@string/categoria" />
+        android:hint="@string/categoria"
+        android:prompt="@string/categoria" />
 
     <EditText
         android:id="@+id/importe"
