--- a/app/src/main/res/menu/menu_crear_gasto.xml
+++ b/app/src/main/res/menu/menu_crear_gasto.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.funebunny.xpdroid.main.ui.CrearGastoActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_crear_gasto"
+    android:title="@string/action_crear_gasto"
+    android:icon="@drawable/ic_action_new"
+    app:showAsAction="always" />
+
+
+    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
+        <!--android:orderInCategory="100" app:showAsAction="never" />-->
 </menu>
