--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
-    <item android:id="@+id/action_agregar"
-        android:title="@string/action_crear_gasto"
-        android:icon="@drawable/ic_action_new"
-        app:showAsAction="always" />
+    <!--<item android:id="@+id/action_agregar_gasto"-->
+        <!--android:title="@string/action_crear_gasto"-->
+        <!--android:icon="@drawable/ic_action_new"-->
+        <!--app:showAsAction="always" />-->
 
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+    <!--<item android:id="@+id/action_settings"-->
+        <!--android:title="@string/action_settings"-->
+        <!--android:orderInCategory="100"-->
+        <!--app:showAsAction="never" />-->
 
 </menu>
