--- a/app/src/main/res/menu/menu_crear_gasto_favorito.xml
+++ b/app/src/main/res/menu/menu_crear_gasto_favorito.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.funebunny.xpdroid.main.ui.CrearGastoFavoritoActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
+        <!--android:orderInCategory="100" app:showAsAction="never" />-->
+
+    <item android:id="@+id/action_crear_gasto_favorito"
+        android:title="@string/action_crear_gasto_favorito"
+        android:icon="@drawable/ic_action_new"
+        app:showAsAction="always" />
+
 </menu>
