Notificaciones Fragment added

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -16,6 +16,7 @@
         <item>@string/navdrawitem5</item>
         <item>@string/navdrawitem6</item>
         <item>@string/navdrawitem7</item>
+        <item>@string/navdrawitem8</item>
     </string-array>
 
 
