--- a/app/src/main/res/layout/activity_crear_gasto.xml
+++ b/app/src/main/res/layout/activity_crear_gasto.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.funebunny.xpdroid.main.ui.CrearGastoActivity">
+    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoActivity">
 
     <EditText
         android:id="@+id/descripcion"
