--- a/app/src/main/res/layout/activity_crear_gasto_programable.xml
+++ b/app/src/main/res/layout/activity_crear_gasto_programable.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
-    tools:context="com.funebunny.xpdroid.main.ui.CrearGastoProgramableActivity"
+    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoProgramableActivity"
     android:onClick="mostrarTimePicker">
 
     <EditText
