--- a/app/src/main/res/layout/activity_crear_objetivo.xml
+++ b/app/src/main/res/layout/activity_crear_objetivo.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
-    tools:context="com.funebunny.xpdroid.main.ui.CrearObjetivoActivity">
+    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearObjetivoActivity">
 
     <EditText
         android:layout_width="wrap_content"
