--- a/app/src/main/res/layout/activity_xpdroid.xml
+++ b/app/src/main/res/layout/activity_xpdroid.xml
@@ -4,5 +4,5 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.funebunny.xpdroid.main.ui.XPDroidActivity">
+    tools:context="com.funebunny.xpdroid.main.ui.activity.XPDroidActivity">
 </RelativeLayout>
