--- a/app/src/main/res/layout/fragment_historialgastositem_list.xml
+++ b/app/src/main/res/layout/fragment_historialgastositem_list.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context="com.funebunny.xpdroid.main.ui.HistorialGastosItemFragment"
+    tools:context="com.funebunny.xpdroid.main.ui.fragment.HistorialGastosItemFragment"
     android:orientation="vertical">
 
     <!--<LinearLayout  android:layout_width="wrap_content"-->
