--- a/app/src/main/res/layout/notificaciones_list_item.xml
+++ b/app/src/main/res/layout/notificaciones_list_item.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.funebunny.xpdroid.main.ui.NotificacionesItemFragment">
+    tools:context="com.funebunny.xpdroid.main.ui.fragment.NotificacionesItemFragment">
 
     <ListView android:id="@android:id/list" android:layout_width="match_parent"
         android:layout_height="match_parent" />
