--- a/app/src/main/res/layout/activity_crear_gasto_programable.xml
+++ b/app/src/main/res/layout/activity_crear_gasto_programable.xml
@@ -1,90 +1,81 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true"
-    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoProgramableActivity"
-    android:onClick="mostrarTimePicker">
+    android:id="@+id/crear_gasto_programable"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/importe"
-        android:layout_marginTop="25dp"
-        android:hint="@string/importe"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/timePicker"
-        android:layout_toStartOf="@+id/timePicker" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="time"
-        android:ems="10"
-        android:id="@+id/horario"
-        android:layout_marginTop="35dp"
-        android:hint="@string/horario"
-        android:layout_below="@+id/importe"
-        android:layout_centerHorizontal="true" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/timePicker"
-        android:src="@drawable/ic_time"
-        android:layout_alignBottom="@+id/horario"
-        android:layout_toRightOf="@+id/horario"
-        android:layout_toEndOf="@+id/horario"
-        android:contentDescription="@string/reloj"
-        android:onClick="mostrarTimePicker" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Spinner
         android:id="@+id/repeticion"
-        android:hint="@string/repeticion"
-        android:layout_below="@+id/horario"
-        android:layout_toLeftOf="@+id/timePicker"
-        android:layout_marginTop="35dp"
-        android:layout_alignLeft="@+id/horario"
-        android:layout_alignStart="@+id/horario" />
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:entries="@array/repeticion" />
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/categoria"
-        android:hint="@string/categoria"
-        android:layout_centerVertical="true"
-        android:layout_below="@+id/repeticion"
-        android:layout_marginTop="35dp"
-        android:layout_toLeftOf="@+id/timePicker"
-        android:layout_alignLeft="@+id/repeticion"
-        android:layout_alignStart="@+id/repeticion" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/descripcion"
-        android:layout_below="@+id/categoria"
-        android:layout_marginTop="35dp"
-        android:layout_alignRight="@+id/categoria"
-        android:layout_alignEnd="@+id/categoria"
-        android:layout_alignLeft="@+id/categoria"
-        android:layout_alignStart="@+id/categoria"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/repeticion"
+        android:layout_centerHorizontal="true"
         android:hint="@string/descripcion" />
 
-    <Button
+    <Spinner
+        android:id="@+id/categoria"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/descripcion"
+        android:layout_centerHorizontal="true"
+        android:entries="@array/categorias"
+        android:hint="@string/categoria"
+        android:prompt="@string/categoria" />
+
+    <EditText
+        android:id="@+id/importe"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/categoria"
+        android:layout_centerHorizontal="true"
+        android:hint="@string/importe"
+        android:inputType="numberDecimal" />
+
+    <EditText
+        android:id="@+id/horario"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/importe"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="@string/horario"
+        android:inputType="time" />
+
+    <ImageButton
+        android:id="@+id/timePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/guardar"
+        android:layout_alignBottom="@id/horario"
+        android:layout_toEndOf="@+id/horario"
+        android:layout_toRightOf="@+id/horario"
+        android:contentDescription="@string/reloj"
+        android:onClick="mostrarTimePicker"
+        android:src="@drawable/ic_time" />
+
+
+    <Spinner
+        android:id="@+id/dias_semana"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/horario"
+        android:layout_centerHorizontal="true"
+        android:entries="@array/dias_semana"
+        android:visibility="invisible" />
+
+    <Button
         android:id="@+id/guardar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:onClick="guardarGastoProgramable"
-        android:layout_marginTop="35dp"
-        android:layout_below="@+id/descripcion"
-        android:layout_centerHorizontal="true" />
+        android:text="@string/guardar" />
+
 </RelativeLayout>
