--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -32,6 +32,21 @@
         <item>@string/importe</item>
     </string-array>
 
+    <string-array name="dias_semana">
+        <item>@string/lunes</item>
+        <item>@string/martes</item>
+        <item>@string/miercoles</item>
+        <item>@string/jueves</item>
+        <item>@string/viernes</item>
+        <item>@string/sabado</item>
+        <item>@string/domingo</item>
+    </string-array>
+
+    <string-array name="repeticion" >
+        <item>@string/diario</item>
+        <item>@string/semanal</item>
+    </string-array>
+
     <!--<string-array name="spinner_meses">-->
         <!--<item><string>Enero</string></item>-->
         <!--<item><string>Febrero</string></item>-->
