--- a/app/src/main/res/layout/fragment_historialgastositem_list.xml
+++ b/app/src/main/res/layout/fragment_historialgastositem_list.xml
@@ -40,7 +40,8 @@
         android:inputType="none"
         android:text="@string/ultimos_gastos_titulo"
         android:textColor="#ff0000ff"
-        android:textSize="@dimen/abc_text_size_medium_material" />
+        android:textSize="@dimen/abc_text_size_medium_material"
+        android:textStyle="bold|italic" />
 
     <ListView android:id="@+id/historial_gastos_lista"
         android:layout_width="wrap_content"
