--- a/app/src/main/res/layout/fragment_historialgastositem_list.xml
+++ b/app/src/main/res/layout/fragment_historialgastositem_list.xml
@@ -1,38 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.funebunny.xpdroid.main.ui.fragment.HistorialGastosItemFragment"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical">
-
-    <!--<LinearLayout  android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal">-->
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="@string/seleccionar_periodo" />-->
-        <!--<EditText-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:inputType="date"-->
-            <!--android:id="@+id/mes_anio_historial"-->
-            <!--android:hint="@string/mes_anio_historial"-->
-            <!--android:clickable="false" />-->
-        <!--<ImageButton-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:id="@+id/monthYearPicker"-->
-            <!--android:src="@drawable/ic_calendar"-->
-            <!--android:onClick="mostrarDatePicker"/>-->
-        <!--<Button-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="@string/boton_mostrar"-->
-            <!--android:id="@+id/boton_mostrar_historial"-->
-            <!--android:onClick="guardarGasto"-->
-            <!--android:layout_gravity="right|top" />-->
-    <!--</LinearLayout>-->
 
     <TextView
         android:layout_width="wrap_content"
@@ -45,32 +16,7 @@
 
     <ListView android:id="@+id/historial_gastos_lista"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <!--<TableRow android:id="@+id/historial_gastos_table_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Fecha"
-                android:id="@+id/textView2" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Categoria"
-                android:id="@+id/textView3" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Importe"
-                android:id="@+id/textView4" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Descripcion"
-                android:id="@+id/textView5" />
-        </TableRow>-->
-    </ListView>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
 
