--- a/app/src/main/res/layout/historial_gastos_list_item.xml
+++ b/app/src/main/res/layout/historial_gastos_list_item.xml
@@ -1,58 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/historial_gastos_list_item"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/historial_gastos_list_item2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:gravity="center_vertical"
+    android:textAppearance="?android:attr/textAppearanceListItemSmall" >
 
-    android:background="?android:attr/activatedBackgroundIndicator"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
+    <TextView android:id="@+id/historial_gastos_lista_fecha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/abc_text_size_medium_material"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true" />
 
-    android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    android:paddingRight="?android:attr/listPreferredItemPaddingRight">-->
+    <TextView android:id="@+id/historial_gastos_lista_categoria"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/abc_text_size_medium_material"
+        android:layout_below="@+id/historial_gastos_lista_fecha"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true" />
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/historial_gastos_list_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceListItemSmall"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:minHeight="?android:attr/listPreferredItemHeightSmall"
-            android:divider="?android:dividerHorizontal"
-            android:showDividers="middle">
+    <TextView android:id="@+id/historial_gastos_lista_importe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/abc_text_size_medium_material"
+        android:layout_below="@+id/historial_gastos_lista_fecha"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignRight="@+id/historial_gastos_lista_fecha" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/historial_gastos_lista_fecha"
-                    android:textSize="@dimen/abc_text_size_medium_material"
-                    android:layout_weight="1" />
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/historial_gastos_lista_categoria"
-                    android:textSize="@dimen/abc_text_size_medium_material"
-                    android:layout_weight="1" />
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/historial_gastos_lista_importe"
-                    android:textSize="@dimen/abc_text_size_medium_material"
-                    android:layout_weight="1" />
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/historial_gastos_lista_descripcion"
-                    android:textSize="@dimen/abc_text_size_medium_material"
-                    android:layout_weight="2" />
+    <TextView android:id="@+id/historial_gastos_lista_descripcion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/abc_text_size_medium_material"
+        android:layout_below="@+id/historial_gastos_lista_categoria"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true" />
 
-        </LinearLayout>
-    </RelativeLayout>
-<!--</TextView>-->
+</RelativeLayout>
 
