--- a/app/src/main/res/layout/historial_gastos_list_item.xml
+++ b/app/src/main/res/layout/historial_gastos_list_item.xml
@@ -1,41 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/historial_gastos_list_item2"
-    android:layout_width="match_parent"
+
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/historial_gastos_list_item"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceListItemSmall" >
+    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:columnCount="2"
+    android:rowCount="2" >
 
     <TextView android:id="@+id/historial_gastos_lista_fecha"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/abc_text_size_medium_material"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true" />
-
-    <TextView android:id="@+id/historial_gastos_lista_categoria"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/abc_text_size_medium_material"
-        android:layout_below="@+id/historial_gastos_lista_fecha"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_column="0"
+        android:layout_row="0"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp" />
 
     <TextView android:id="@+id/historial_gastos_lista_importe"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/abc_text_size_medium_material"
-        android:layout_below="@+id/historial_gastos_lista_fecha"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignRight="@+id/historial_gastos_lista_fecha" />
+        android:layout_column="1"
+        android:layout_row="0"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_gravity="right|top" />
+
+    <TextView android:id="@+id/historial_gastos_lista_categoria"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/abc_text_size_medium_material"
+        android:layout_column="0"
+        android:layout_row="1"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp" />
 
     <TextView android:id="@+id/historial_gastos_lista_descripcion"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/abc_text_size_medium_material"
-        android:layout_below="@+id/historial_gastos_lista_categoria"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true" />
+        android:layout_column="1"
+        android:layout_row="1"
+        android:layout_marginBottom="5dp"
+        android:maxLines="1"
+        android:ellipsize="marquee"/>
 
-</RelativeLayout>
+</GridLayout>
 
