Cambios en el layout de historial

--- a/app/src/main/res/layout/historial_gastos_list_item.xml
+++ b/app/src/main/res/layout/historial_gastos_list_item.xml
@@ -59,7 +59,8 @@
             android:gravity="right"
             android:layout_marginBottom="5dp"
             android:textStyle="bold"
-            android:textColor="#ffff8100" />
+            android:textColor="#ffff8100"
+            android:singleLine="true" />
 
     </LinearLayout>
 
