--- a/app/src/main/res/layout/activity_crear_gasto_favorito.xml
+++ b/app/src/main/res/layout/activity_crear_gasto_favorito.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/importe"
+        android:id="@+id/et_importe"
         android:layout_marginTop="43dp"
         android:hint="@string/importe"
         android:layout_alignParentTop="true"
@@ -25,11 +25,11 @@
         android:id="@+id/categoria"
         android:hint="@string/categoria"
         android:layout_marginTop="39dp"
-        android:layout_below="@+id/importe"
-        android:layout_alignRight="@+id/importe"
-        android:layout_alignEnd="@+id/importe"
-        android:layout_alignLeft="@+id/importe"
-        android:layout_alignStart="@+id/importe" />
+        android:layout_below="@+id/et_importe"
+        android:layout_alignRight="@+id/et_importe"
+        android:layout_alignEnd="@+id/et_importe"
+        android:layout_alignLeft="@+id/et_importe"
+        android:layout_alignStart="@+id/et_importe" />
 
     <EditText
         android:layout_width="wrap_content"
